--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -1,6 +1,8 @@
 header {
+  background-color: #253380;
   .head-top {
-    background-color: #253380;
+    border-bottom: 1px solid #00a2c2;
+    padding: 3px;
     .container {
       .row {
         .head-contact {
@@ -55,8 +57,8 @@ header {
             &:hover {
               color: #00a2c2;
             }
-            .bi-chevron-down{
-                font-size: 10px;
+            .bi-chevron-down {
+              font-size: 10px;
             }
           }
           .english {
@@ -71,8 +73,171 @@ header {
             &:hover {
               color: #00a2c2;
             }
-            .bi-chevron-down{
-                font-size: 10px;
+            .bi-chevron-down {
+              font-size: 10px;
+            }
+          }
+        }
+      }
+    }
+  }
+  nav {
+    .container {
+      .row {
+        .page-logo {
+          width: 146px;
+          height: 43px;
+
+          a {
+            list-style: none;
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              object-position: center;
+            }
+          }
+        }
+        form {
+          display: flex;
+          align-items: center;
+          position: relative;
+          .search {
+            color: #555555;
+            font-size: 13px;
+            height: 45px;
+            padding-left: 2.5rem;
+            padding-right: 23rem;
+            font-weight: 400;
+            font-family: "Poppins", sans-serif;
+            border-radius: 30px 0px 0px 30px;
+            border: none;
+          }
+          .submit {
+            background-color: #00a2c2;
+            font-family: "Poppins", sans-serif;
+            border-radius: 0px 30px 30px 0px;
+            border: none;
+            color: #ffffff;
+            height: 45px;
+            font-size: 13px;
+            font-weight: 400;
+            padding: 14px;
+          }
+          .bi-search {
+            color: #555555;
+            position: absolute;
+            top: 11px;
+            left: 12px;
+            font-size: 17px;
+          }
+        }
+        .nav-left {
+          display: flex;
+          align-items: baseline;
+          gap: 39px;
+          justify-content: center;
+          .acount {
+            display: flex;
+            align-items: flex-start;
+            gap: 7px;
+            transition: 0.3s ease-in-out;
+            cursor: pointer;
+            &:hover {
+              .bi-person {
+                color: #00a2c2;
+              }
+            }
+            .bi-person {
+              color: #ffffff;
+              font-size: 28px;
+              transition: 0.3s ease-in-out;
+            }
+            .acountorlogin {
+              .login {
+                color: #fff;
+                font-size: 12px;
+                filter: opacity(0.5);
+                display: block;
+              }
+              .account {
+                color: #fff;
+                font-size: 14px;
+                display: block;
+              }
+            }
+          }
+          .heart {
+            position: relative;
+            cursor: pointer;
+            &:hover{
+              .bi-heart{
+                color: #00a2c2;
+              }
+            }
+            .bi-heart {
+              color: #ffffff;
+              font-size: 25px;
+              transition: 0.3s ease-in-out;
+            }
+            .zero {
+              color: #fff;
+              font-size: 13px;
+              background-color: #00a2c2;
+              border-radius: 50%;
+              width: 18px;
+              height: 18px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              position: absolute;
+              top: 0;
+              left: 15px;
+            }
+          }
+          .shop {
+            position: relative;
+            display: flex;
+            align-items: flex-start;
+            gap: 13px;
+            transition: 0.3s ease-in-out;
+            cursor: pointer;
+            &:hover {
+              .bi-cart {
+                color: #00a2c2;
+              }
+            }
+            .bi-cart {
+              color: #ffffff;
+              font-size: 28px;
+              transition: 0.3s ease-in-out;
+            }
+            .acountorlogin {
+              .login {
+                color: #fff;
+                font-size: 12px;
+                filter: opacity(0.5);
+                display: block;
+              }
+              .account {
+                color: #fff;
+                font-size: 14px;
+                display: block;
+              }
+            }
+            .zero1 {
+              color: #fff;
+              font-size: 13px;
+              background-color: #00a2c2;
+              border-radius: 50%;
+              width: 18px;
+              height: 18px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              position: absolute;
+              top: 0;
+              left: 15px;
             }
           }
         }
