--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -82,162 +82,328 @@ header {
     }
   }
   nav {
-    .container {
-      .row {
-        .page-logo {
-          width: 146px;
-          height: 43px;
-
-          a {
-            list-style: none;
-            img {
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-              object-position: center;
-            }
-          }
-        }
-        form {
+    .nav-top {
+      .container {
+        .row {
           display: flex;
           align-items: center;
-          position: relative;
-          .search {
-            color: #555555;
-            font-size: 13px;
-            height: 45px;
-            padding-left: 2.5rem;
-            padding-right: 23rem;
-            font-weight: 400;
-            font-family: "Poppins", sans-serif;
-            border-radius: 30px 0px 0px 30px;
-            border: none;
+          justify-content: center;
+          .page-logo {
+            width: 146px;
+            height: 43px;
+
+            a {
+              list-style: none;
+              img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
+              }
+            }
           }
-          .submit {
-            background-color: #00a2c2;
-            font-family: "Poppins", sans-serif;
-            border-radius: 0px 30px 30px 0px;
-            border: none;
-            color: #ffffff;
-            height: 45px;
-            font-size: 13px;
-            font-weight: 400;
-            padding: 14px;
+          form {
+            display: flex;
+            align-items: center;
+            position: relative;
+            .search {
+              color: #555555;
+              font-size: 13px;
+              height: 45px;
+              padding-left: 2.5rem;
+              padding-right: 23rem;
+              font-weight: 400;
+              font-family: "Poppins", sans-serif;
+              border-radius: 30px 0px 0px 30px;
+              border: none;
+            }
+            .submit {
+              background-color: #00a2c2;
+              font-family: "Poppins", sans-serif;
+              border-radius: 0px 30px 30px 0px;
+              border: none;
+              color: #ffffff;
+              height: 45px;
+              font-size: 13px;
+              font-weight: 400;
+              padding: 14px;
+            }
+            .bi-search {
+              color: #555555;
+              position: absolute;
+              top: 11px;
+              left: 12px;
+              font-size: 17px;
+            }
           }
-          .bi-search {
-            color: #555555;
-            position: absolute;
-            top: 11px;
-            left: 12px;
-            font-size: 17px;
+          .nav-left {
+            display: flex;
+            align-items: baseline;
+            gap: 39px;
+            justify-content: center;
+            .acount {
+              display: flex;
+              align-items: flex-start;
+              gap: 7px;
+              transition: 0.3s ease-in-out;
+              cursor: pointer;
+              &:hover {
+                .bi-person {
+                  color: #00a2c2;
+                }
+              }
+              .bi-person {
+                color: #ffffff;
+                font-size: 28px;
+                transition: 0.3s ease-in-out;
+              }
+              .acountorlogin {
+                .login {
+                  color: #fff;
+                  font-size: 12px;
+                  filter: opacity(0.5);
+                  display: block;
+                }
+                .account {
+                  color: #fff;
+                  font-size: 14px;
+                  display: block;
+                }
+              }
+            }
+            .heart {
+              position: relative;
+              cursor: pointer;
+              &:hover {
+                .bi-heart {
+                  color: #00a2c2;
+                }
+              }
+              .bi-heart {
+                color: #ffffff;
+                font-size: 25px;
+                transition: 0.3s ease-in-out;
+              }
+              .zero {
+                color: #fff;
+                font-size: 13px;
+                background-color: #00a2c2;
+                border-radius: 50%;
+                width: 18px;
+                height: 18px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: absolute;
+                top: 0;
+                left: 15px;
+              }
+            }
+            .shop {
+              position: relative;
+              display: flex;
+              align-items: flex-start;
+              gap: 13px;
+              transition: 0.3s ease-in-out;
+              cursor: pointer;
+              &:hover {
+                .bi-cart {
+                  color: #00a2c2;
+                }
+              }
+              .bi-cart {
+                color: #ffffff;
+                font-size: 28px;
+                transition: 0.3s ease-in-out;
+              }
+              .acountorlogin {
+                .login {
+                  color: #fff;
+                  font-size: 12px;
+                  filter: opacity(0.5);
+                  display: block;
+                }
+                .account {
+                  color: #fff;
+                  font-size: 14px;
+                  display: block;
+                }
+              }
+              .zero1 {
+                color: #fff;
+                font-size: 13px;
+                background-color: #00a2c2;
+                border-radius: 50%;
+                width: 18px;
+                height: 18px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: absolute;
+                top: 0;
+                left: 15px;
+              }
+            }
           }
         }
-        .nav-left {
-          display: flex;
-          align-items: baseline;
-          gap: 39px;
-          justify-content: center;
-          .acount {
+      }
+    }
+    .nav-bottom {
+      background-color: #fff;
+      border-bottom: 1px solid #e3e3e3;
+      .container {
+        .row {
+          .departments {
             display: flex;
-            align-items: flex-start;
-            gap: 7px;
-            transition: 0.3s ease-in-out;
-            cursor: pointer;
-            &:hover {
-              .bi-person {
+            align-items: end;
+
+            border-right: 1px solid #e3e3e3;
+            width: 238px;
+
+            gap: 54px;
+
+            h3 {
+              display: flex;
+              align-items: center;
+              gap: 6px;
+              font-size: 14px;
+              margin: 0;
+              font-weight: 600;
+              .bi-list {
+                font-size: 22px;
+              }
+            }
+            .bi-chevron-down {
+              font-size: 15px;
+            }
+          }
+          ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            gap: 39px;
+
+            .home {
+              color: #111111;
+              font-size: 14px;
+              font-weight: 600;
+              cursor: pointer;
+              transition: 0.3s ease-in-out;
+              display: flex;
+              align-items: baseline;
+              gap: 6px;
+              &:hover {
+                color: #00a2c2;
+              }
+              .bi-chevron-down {
+                font-size: 12px;
+              }
+            }
+            .shop {
+              color: #111111;
+              font-size: 14px;
+              font-weight: 600;
+              cursor: pointer;
+              transition: 0.3s ease-in-out;
+              display: flex;
+              align-items: baseline;
+              gap: 6px;
+              &:hover {
+                color: #00a2c2;
+              }
+              .bi-chevron-down {
+                font-size: 12px;
+              }
+            }
+            .product {
+              color: #111111;
+              font-size: 14px;
+              font-weight: 600;
+              cursor: pointer;
+              transition: 0.3s ease-in-out;
+              display: flex;
+              align-items: baseline;
+              gap: 6px;
+              &:hover {
+                color: #00a2c2;
+              }
+              .bi-chevron-down {
+                font-size: 12px;
+              }
+            }
+            .blog {
+              color: #111111;
+              font-size: 14px;
+              font-weight: 600;
+              cursor: pointer;
+              transition: 0.3s ease-in-out;
+              display: flex;
+              align-items: baseline;
+              gap: 6px;
+              &:hover {
+                color: #00a2c2;
+              }
+              .bi-chevron-down {
+                font-size: 12px;
+              }
+            }
+            .page {
+              color: #111111;
+              font-size: 14px;
+              font-weight: 600;
+              cursor: pointer;
+              transition: 0.3s ease-in-out;
+              display: flex;
+              align-items: baseline;
+              gap: 6px;
+              &:hover {
+                color: #00a2c2;
+              }
+              .bi-chevron-down {
+                font-size: 12px;
+              }
+            }
+            .buy {
+              color: #111111;
+              font-size: 14px;
+              font-weight: 600;
+              cursor: pointer;
+              transition: 0.3s ease-in-out;
+              &:hover {
                 color: #00a2c2;
               }
             }
-            .bi-person {
-              color: #ffffff;
-              font-size: 28px;
-              transition: 0.3s ease-in-out;
-            }
-            .acountorlogin {
-              .login {
-                color: #fff;
-                font-size: 12px;
-                filter: opacity(0.5);
-                display: block;
-              }
-              .account {
-                color: #fff;
-                font-size: 14px;
-                display: block;
-              }
-            }
           }
-          .heart {
-            position: relative;
+          .recently {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            justify-content: center;
             cursor: pointer;
+            transition: .3s ease-in-out;
             &:hover{
-              .bi-heart{
+              .bi-clock{
                 color: #00a2c2;
               }
-            }
-            .bi-heart {
-              color: #ffffff;
-              font-size: 25px;
-              transition: 0.3s ease-in-out;
-            }
-            .zero {
-              color: #fff;
-              font-size: 13px;
-              background-color: #00a2c2;
-              border-radius: 50%;
-              width: 18px;
-              height: 18px;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              position: absolute;
-              top: 0;
-              left: 15px;
-            }
-          }
-          .shop {
-            position: relative;
-            display: flex;
-            align-items: flex-start;
-            gap: 13px;
-            transition: 0.3s ease-in-out;
-            cursor: pointer;
-            &:hover {
-              .bi-cart {
+              h4{
                 color: #00a2c2;
+               
               }
             }
-            .bi-cart {
-              color: #ffffff;
-              font-size: 28px;
-              transition: 0.3s ease-in-out;
+            .bi-clock {
+              color: #111111;
+              font-size: 17px;
+              transition: .3s ease-in-out;
             }
-            .acountorlogin {
-              .login {
-                color: #fff;
-                font-size: 12px;
-                filter: opacity(0.5);
-                display: block;
-              }
-              .account {
-                color: #fff;
-                font-size: 14px;
-                display: block;
-              }
-            }
-            .zero1 {
-              color: #fff;
-              font-size: 13px;
-              background-color: #00a2c2;
-              border-radius: 50%;
-              width: 18px;
-              height: 18px;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              position: absolute;
-              top: 0;
-              left: 15px;
+            h4 {
+              color: #111111;
+              font-size: 15px;
+              font-weight: 400;
+              transition: .3s ease-in-out;
+              margin: 0;
             }
           }
         }
